--- a/module-1/lab-web-scraping/your-code/main.ipynb
+++ b/module-1/lab-web-scraping/your-code/main.ipynb
@@ -40,11 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
+    "import requests as req\n",
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
     "# from pprint import pprint\n",
@@ -66,21 +66,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'https://github.com/trending/developers'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#your code"
+    "url = 'https://github.com/trending/developers'\n",
+    "res_devs = req.get(url)\n",
+    "soup = BeautifulSoup(res_devs.text, 'html.parser')"
    ]
   },
   {
@@ -134,11 +127,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Peter Bourgon /peterbourgon\n",
+      "Pierre Krieger /tomaka\n",
+      "Carl Lerche /carllerche\n",
+      "Matt Layher /mdlayher\n",
+      "Claudio Sanches /claudiosanches\n",
+      "Jeremy Long /jeremylong\n",
+      "Eddy Verbruggen /EddyVerbruggen\n",
+      "Kyle /kylekatarnls\n",
+      "Jeff Geerling /geerlingguy\n",
+      "Kirk Wight /kwight\n",
+      "Daniel Shiffman /shiffman\n",
+      "子骅 /luin\n",
+      "Bastian Köcher /bkchr\n",
+      "Brendan Forster /shiftkey\n",
+      "Benjamin Eberlei /beberlei\n",
+      "Tim Griesser /tgriesser\n",
+      "Sascha Grunert /saschagrunert\n",
+      "Juliette /jrfnl\n",
+      "Carlos Alexandro Becker /caarlos0\n",
+      "John Blackbourn /johnbillion\n",
+      "Harry Wolff /hswolff\n",
+      "Yoni Goldberg /i0natan\n",
+      "Felix Angelov /felangel\n",
+      "Rob Moran /thegecko\n",
+      "Ayrat Badykov /ayrat555\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code"
+    "devs = soup.select('h1.h3 a')\n",
+    "for dev in devs:\n",
+    "    print(dev.text, dev.attrs['href'])"
    ]
   },
   {
@@ -152,12 +179,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'https://github.com/trending/python?since=daily'"
+    "url = 'https://github.com/trending/python?since=daily'\n",
+    "res_repo = req.get(url)\n",
+    "soup = BeautifulSoup(res_repo.text, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "bokeh / bokeh\n",
+      "\n",
+      "\n",
+      "\n",
+      "raspberrypi / documentation\n",
+      "\n",
+      "\n",
+      "\n",
+      "celery / celery\n",
+      "\n",
+      "\n",
+      "\n",
+      "ZhuiyiTechnology / nl2sql_baseline\n",
+      "\n",
+      "\n",
+      "\n",
+      "apache / airflow\n",
+      "\n",
+      "\n",
+      "\n",
+      "fishtown-analytics / dbt\n",
+      "\n",
+      "\n",
+      "\n",
+      "tweepy / tweepy\n",
+      "\n",
+      "\n",
+      "\n",
+      "facebookresearch / Detectron\n",
+      "\n",
+      "\n",
+      "\n",
+      "mlflow / mlflow\n",
+      "\n",
+      "\n",
+      "\n",
+      "USTC-Resource / USTC-Course\n",
+      "\n",
+      "\n",
+      "\n",
+      "tensorflow / tensor2tensor\n",
+      "\n",
+      "\n",
+      "\n",
+      "dmlc / tvm\n",
+      "\n",
+      "\n",
+      "\n",
+      "openshift / openshift-ansible\n",
+      "\n",
+      "\n",
+      "\n",
+      "python-telegram-bot / python-telegram-bot\n",
+      "\n",
+      "\n",
+      "\n",
+      "rbgirshick / py-faster-rcnn\n",
+      "\n",
+      "\n",
+      "\n",
+      "microsoft / nni\n",
+      "\n",
+      "\n",
+      "\n",
+      "locustio / locust\n",
+      "\n",
+      "\n",
+      "\n",
+      "googleapis / google-cloud-python\n",
+      "\n",
+      "\n",
+      "\n",
+      "huge-success / sanic\n",
+      "\n",
+      "\n",
+      "\n",
+      "edx / edx-platform\n",
+      "\n",
+      "\n",
+      "\n",
+      "MobSF / Mobile-Security-Framework-MobSF\n",
+      "\n",
+      "\n",
+      "\n",
+      "sabricot / django-elasticsearch-dsl\n",
+      "\n",
+      "\n",
+      "\n",
+      "Julian / jsonschema\n",
+      "\n",
+      "\n",
+      "\n",
+      "scrapy / scrapy\n",
+      "\n",
+      "\n",
+      "\n",
+      "Neo23x0 / sigma\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "repository = soup.select('h1.h3 a')\n",
+    "for repo in repository:\n",
+    "    print(repo.text)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -166,7 +319,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "url = 'https://en.wikipedia.org/wiki/Walt_Disney'\n",
+    "res_img = req.get(url)\n",
+    "soup = BeautifulSoup(res_img.text, 'html.parser')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "repository = soup.select('h1.h3 a')\n",
+    "for repo in repository:\n",
+    "    print(repo.text)\n",
+    "\n"
    ]
   },
   {
@@ -178,21 +345,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'https://en.wikipedia.org/wiki/Walt_Disney'"
+    "url = 'https://en.wikipedia.org/wiki/Walt_Disney'\n",
+    "res_img = req.get(url)\n",
+    "soup = BeautifulSoup(res_img.text, 'html.parser')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "//upload.wikimedia.org/wikipedia/en/thumb/e/e7/Cscr-featured.svg/20px-Cscr-featured.svg.png\n",
+      "//upload.wikimedia.org/wikipedia/en/thumb/1/1b/Semi-protection-shackle.svg/20px-Semi-protection-shackle.svg.png\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/d/df/Walt_Disney_1946.JPG/220px-Walt_Disney_1946.JPG\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/8/87/Walt_Disney_1942_signature.svg/150px-Walt_Disney_1942_signature.svg.png\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/c/c4/Walt_Disney_envelope_ca._1921.jpg/220px-Walt_Disney_envelope_ca._1921.jpg\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/4/4d/Newman_Laugh-O-Gram_%281921%29.webm/220px-seek%3D2-Newman_Laugh-O-Gram_%281921%29.webm.jpg\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Trolley_Troubles_poster.jpg/170px-Trolley_Troubles_poster.jpg\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/7/71/Walt_Disney_and_his_cartoon_creation_%22Mickey_Mouse%22_-_National_Board_of_Review_Magazine.jpg/170px-Walt_Disney_and_his_cartoon_creation_%22Mickey_Mouse%22_-_National_Board_of_Review_Magazine.jpg\n",
+      "//upload.wikimedia.org/wikipedia/en/thumb/4/4e/Steamboat-willie.jpg/170px-Steamboat-willie.jpg\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/5/57/Walt_Disney_1935.jpg/170px-Walt_Disney_1935.jpg\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/c/cd/Walt_Disney_Snow_white_1937_trailer_screenshot_%2813%29.jpg/220px-Walt_Disney_Snow_white_1937_trailer_screenshot_%2813%29.jpg\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/1/15/Disney_drawing_goofy.jpg/170px-Disney_drawing_goofy.jpg\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/1/13/DisneySchiphol1951.jpg/220px-DisneySchiphol1951.jpg\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/8/8c/WaltDisneyplansDisneylandDec1954.jpg/220px-WaltDisneyplansDisneylandDec1954.jpg\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Walt_disney_portrait_right.jpg/170px-Walt_disney_portrait_right.jpg\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Walt_Disney_Grave.JPG/170px-Walt_Disney_Grave.JPG\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/2/2d/Roy_O._Disney_with_Company_at_Press_Conference.jpg/170px-Roy_O._Disney_with_Company_at_Press_Conference.jpg\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/a/a9/Disney_Display_Case.JPG/170px-Disney_Display_Case.JPG\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Disney1968.jpg/170px-Disney1968.jpg\n",
+      "//upload.wikimedia.org/wikipedia/en/thumb/8/8a/OOjs_UI_icon_edit-ltr-progressive.svg/10px-OOjs_UI_icon_edit-ltr-progressive.svg.png\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/d/da/Animation_disc.svg/30px-Animation_disc.svg.png\n",
+      "//upload.wikimedia.org/wikipedia/en/thumb/6/69/P_vip.svg/29px-P_vip.svg.png\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Magic_Kingdom_castle.jpg/24px-Magic_Kingdom_castle.jpg\n",
+      "//upload.wikimedia.org/wikipedia/en/thumb/e/e7/Video-x-generic.svg/30px-Video-x-generic.svg.png\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/a/a3/Flag_of_Los_Angeles_County%2C_California.svg/30px-Flag_of_Los_Angeles_County%2C_California.svg.png\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/a/a3/USA_flag_on_television.svg/30px-USA_flag_on_television.svg.png\n",
+      "//upload.wikimedia.org/wikipedia/en/thumb/4/4a/Commons-logo.svg/22px-Commons-logo.svg.png\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/f/fa/Wikiquote-logo.svg/25px-Wikiquote-logo.svg.png\n",
+      "//upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Wikidata-logo.svg/30px-Wikidata-logo.svg.png\n",
+      "//upload.wikimedia.org/wikipedia/en/thumb/8/8a/OOjs_UI_icon_edit-ltr-progressive.svg/10px-OOjs_UI_icon_edit-ltr-progressive.svg.png\n",
+      "//en.wikipedia.org/wiki/Special:CentralAutoLogin/start?type=1x1\n",
+      "/static/images/wikimedia-button.png\n",
+      "/static/images/poweredby_mediawiki_88x31.png\n"
+     ]
+    }
+   ],
+   "source": [
+    "image = soup.select('img')\n",
+    "for i in image:\n",
+    "    print(i['src'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "#import re\n",
+    "\n",
+    "#images = soup.find_all('img', {'src': re.compile('.jpg')})\n",
+    "#for image in images:\n",
+    "#    print(image['src'])\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -204,21 +430,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url ='https://en.wikipedia.org/wiki/Python' "
+    "url ='https://en.wikipedia.org/wiki/Python' \n",
+    "res_links = req.get(url)\n",
+    "soup = BeautifulSoup(res_links.text, 'html.parser')\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (<ipython-input-29-8c800c809fde>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-29-8c800c809fde>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    links = soup.select('a[href])\u001b[0m\n\u001b[0m                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code"
+    "links = soup.select('a[href])\n",
+    "for link in links:\n",
+    "    print(link['href'])\n",
+    "    \n",
+    "#ni idea de como sacarlo"
    ]
   },
   {
@@ -230,21 +472,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'http://uscode.house.gov/download/download.shtml'"
+    "url = 'http://uscode.house.gov/download/download.shtml'\n",
+    "res_titles = req.get(url)\n",
+    "soup = BeautifulSoup(res_titles.text, 'html.parser')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code"
+    "titles = soup.select('.usctitlechanged')\n",
+    "print(len(titles))"
    ]
   },
   {
@@ -256,21 +509,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'https://www.fbi.gov/wanted/topten'"
+    "url = 'https://www.fbi.gov/wanted/topten'\n",
+    "res_names = req.get(url)\n",
+    "soup = BeautifulSoup(res_names.text, 'html.parser')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "JASON DEREK BROWN\n",
+      "RAFAEL CARO-QUINTERO\n",
+      "ALEXIS FLORES\n",
+      "EUGENE PALMER\n",
+      "SANTIAGO VILLALBA MEDEROS\n",
+      "ROBERT WILLIAM FISHER\n",
+      "BHADRESHKUMAR CHETANBHAI PATEL\n",
+      "ARNOLDO JIMENEZ\n",
+      "ALEJANDRO ROSALES CASTILLO\n",
+      "YASER ABDEL SAID\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code "
+    "name = soup.select('h3.title a')\n",
+    "for n in name:\n",
+    "    print(n.text)\n",
+    "\n",
+    "\n"
    ]
   },
   {
