--- a/module-1/lab-web-scraping/your-code/main.ipynb
+++ b/module-1/lab-web-scraping/your-code/main.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -924,14 +924,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Invalid user\n"
+      "@barackobama: 15643  tweets\n"
      ]
     }
    ],
@@ -941,8 +941,8 @@
     "try:\n",
     "    res13 = req.get(url9+account)\n",
     "    soup = BeautifulSoup(res13.text, 'html.parser')\n",
-    "    a= soup.select('li.ProfileNav-item ProfileNav-item--tweets is-active a ')\n",
-    "    print(a.get('title'))\n",
+    "    a= soup.select('span.ProfileNav-value')\n",
+    "    print('@{}:'.format(account), a[0].get('data-count'),' tweets')\n",
     "  \n",
     "except:\n",
     "    print('Invalid user')"
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,11 +976,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid user\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code\n"
+    "#your code\n",
+    "account='barackobama'\n",
+    "try:\n",
+    "    res14 = req.get(url10+account)\n",
+    "    soup = BeautifulSoup(res14.text, 'html.parser')\n",
+    "    a= soup.select('span.ProfileNav-value')\n",
+    "    print('@{}:'.format(account), a[2].get('data-count'),' followers')\n",
+    "  \n",
+    "except:\n",
+    "    print('Invalid user')"
    ]
   },
   {
@@ -992,21 +1009,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'https://www.wikipedia.org/'"
+    "url11 = 'https://www.wikipedia.org/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['English', '5.878.000'], ['æ\\x97¥æ\\x9c¬èª\\x9e', '1.155.000'], ['EspaÃ±ol', '1.528.000'], ['Deutsch', '2.314.000'], ['Ð\\xa0Ñ\\x83Ñ\\x81Ñ\\x81ÐºÐ¸Ð¹', '1.551.000'], ['FranÃ§ais', '2.116.000'], ['Italiano', '1.535.000'], ['ä¸\\xadæ\\x96\\x87', '1.062.000'], ['PortuguÃªs', '1.008.000'], ['Polski', '1.342.000']]\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code"
+    "#your code\n",
+    "import re\n",
+    "res15 = req.get(url11)\n",
+    "soup = BeautifulSoup(res15.text, 'html.parser')\n",
+    "a= soup.select('body a.link-box')\n",
+    "languages=[]\n",
+    "for i in range(len(a)):\n",
+    "    languages.append(a[i].get_text().strip().split('\\n'))\n",
+    "for i in range(len(languages)):\n",
+    "    languages[i][1]='.'.join(re.findall('\\d+',languages[i][1]))\n",
+    "\n",
+    "print(languages)"
    ]
   },
   {
@@ -1018,21 +1054,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'https://data.gov.uk/'"
+    "url12 = 'https://data.gov.uk/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Business and economy', 'Crime and justice', 'Defence', 'Education', 'Environment', 'Government', 'Government spending', 'Health', 'Mapping', 'Society', 'Towns and cities', 'Transport']\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code "
+    "#your code\n",
+    "data=[]\n",
+    "res16 = req.get(url12)\n",
+    "soup = BeautifulSoup(res16.text, 'html.parser')\n",
+    "for i in soup.select('h2 a'):\n",
+    "    data.append(i.get_text())\n",
+    "print(data)"
    ]
   },
   {
@@ -1044,12 +1094,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'https://en.wikipedia.org/wiki/List_of_languages_by_number_of_native_speakers'"
+    "url13 = 'https://en.wikipedia.org/wiki/List_of_languages_by_number_of_native_speakers'"
    ]
   },
   {
@@ -1058,7 +1108,124 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "#your code\n",
+    "langu=[]\n",
+    "native=[]\n",
+    "res17 = req.get(url13)\n",
+    "soup = BeautifulSoup(res17.text, 'html.parser')\n",
+    "\n",
+    "lst_elements = soup.select(\"td b a\")\n",
+    "\n",
+    "for e in range(10):\n",
+    "    langu.append(lst_elements[e].text)\n",
+    "\n",
+    "lst_elements2 = soup.select(\"tr td\")\n",
+    "\n",
+    "#for e in range(10):\n",
+    " #   native.append(lst_elements2[e].text)    \n",
+    "\n",
+    "#list(map(lambda x: x.findChildren()[0].text.rstrip(), lst_elements2))\n",
+    "    \n",
+    "print(langu)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Language</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Mandarin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Spanish</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>English</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Hindi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Arabic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Portuguese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Bengali</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Russian</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Japanese</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Punjabi</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Language\n",
+       "0    Mandarin\n",
+       "1     Spanish\n",
+       "2     English\n",
+       "3       Hindi\n",
+       "4      Arabic\n",
+       "5  Portuguese\n",
+       "6     Bengali\n",
+       "7     Russian\n",
+       "8    Japanese\n",
+       "9     Punjabi"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dflangu=pd.DataFrame()\n",
+    "dflangu['Language']=langu\n",
+    "dflangu"
    ]
   },
   {
@@ -1083,7 +1250,7 @@
    "source": [
     "# This is the url you will scrape in this exercise \n",
     "# You will need to add the account credentials to this url\n",
-    "url = 'https://twitter.com/'"
+    "url20 = 'https://twitter.com/'"
    ]
   },
   {
@@ -1092,7 +1259,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code"
+    "# your code\n",
+    "account='barackobama'\n",
+    "try:\n",
+    "    res14 = req.get(url20+account)\n",
+    "    soup = BeautifulSoup(res14.text, 'html.parser')\n",
+    "    a= soup.select('span.ProfileNav-value')\n",
+    "    print('@{}:'.format(account), a[2].get('data-count'),' followers')\n",
+    "  \n",
+    "except:\n",
+    "    print('Invalid user')"
    ]
   },
   {
@@ -1118,7 +1294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code"
+    "# your code\n"
    ]
   },
   {
