--- a/module-1/lab-web-scraping/your-code/main.ipynb
+++ b/module-1/lab-web-scraping/your-code/main.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,12 +48,12 @@
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
     "# from pprint import pprint\n",
-    "# from lxml import html\n",
+    "#from lxml import html\n",
     "# from lxml.html import fromstring\n",
     "# import urllib.request\n",
     "# from urllib.request import urlopen\n",
     "# import random\n",
-    "# import re\n",
+    "import re\n",
     "# import scrapy"
    ]
   },
@@ -62,25 +62,6 @@
    "metadata": {},
    "source": [
     "#### Download, parse (using BeautifulSoup), and print the content from the Trending Developers page from GitHub:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# This is the url you will scrape in this exercise\n",
-    "url = 'https://github.com/trending/developers'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#your code"
    ]
   },
   {
@@ -134,11 +115,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'requests.models.Response'>\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code"
+    "# This is the url you will scrape in this exercise\n",
+    "# print the content\n",
+    "url = 'https://github.com/trending/developers'\n",
+    "res = requests.get(url)\n",
+    "print(type(res))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Peter Bourgon(peterbourgon)', 'Pierre Krieger(tomaka)', 'Carl Lerche(carllerche)', 'Matt Layher(mdlayher)', 'Claudio Sanches(claudiosanches)', 'Jeremy Long(jeremylong)', 'Eddy Verbruggen(EddyVerbruggen)', 'Kyle(kylekatarnls)', 'Jeff Geerling(geerlingguy)', 'Kirk Wight(kwight)', 'Daniel Shiffman(shiffman)', '子骅(luin)', 'Bastian Köcher(bkchr)', 'Brendan Forster(shiftkey)', 'Benjamin Eberlei(beberlei)', 'Tim Griesser(tgriesser)', 'Sascha Grunert(saschagrunert)', 'Juliette(jrfnl)', 'Carlos Alexandro Becker(caarlos0)', 'John Blackbourn(johnbillion)', 'Harry Wolff(hswolff)', 'Yoni Goldberg(i0natan)', 'Felix Angelov(felangel)', 'Rob Moran(thegecko)', 'Ayrat Badykov(ayrat555)']\n"
+     ]
+    }
+   ],
+   "source": [
+    "soup = BeautifulSoup(res.text, 'html.parser')\n",
+    "lista = []\n",
+    "for e in soup.select(\"h1.h3 a\"):\n",
+    "     lista.append((e.get_text() + '(' + e.get('href').replace('/','') + ')'))\n",
+    "print(lista)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Peter Bourgon', 'Pierre Krieger', 'Carl Lerche', 'Matt Layher', 'Claudio Sanches', 'Jeremy Long', 'Eddy Verbruggen', 'Kyle', 'Jeff Geerling', 'Kirk Wight', 'Daniel Shiffman', '子骅', 'Bastian Köcher', 'Brendan Forster', 'Benjamin Eberlei', 'Tim Griesser', 'Sascha Grunert', 'Juliette', 'Carlos Alexandro Becker', 'John Blackbourn', 'Harry Wolff', 'Yoni Goldberg', 'Felix Angelov', 'Rob Moran', 'Ayrat Badykov'] [None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None]\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = soup.findAll('h1','h3','a')\n",
+    "# type nombre_alias = bs4.element.ResultSet\n",
+    "n = ([e.text.strip() for e in names])\n",
+    "al = ([e.get(\"href\")  for e in names])   # WHY NOT THIS WAY???\n",
+    "print(n,al)"
    ]
   },
   {
@@ -152,21 +189,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'requests.models.Response'>\n"
+     ]
+    }
+   ],
    "source": [
-    "# This is the url you will scrape in this exercise\n",
-    "url = 'https://github.com/trending/python?since=daily'"
+    "url = 'https://github.com/trending/python?since=daily'\n",
+    "res = requests.get(url)\n",
+    "print(type(res))\n",
+    "soup = BeautifulSoup(res.text, 'html.parser')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "#your code"
+    "#me voy a Disney, que me hace más ilusión"
    ]
   },
   {
@@ -178,21 +227,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url = 'https://en.wikipedia.org/wiki/Walt_Disney'"
+    "url = 'https://en.wikipedia.org/wiki/Walt_Disney'\n",
+    "res = requests.get(url)\n",
+    "soup = BeautifulSoup(res.text, 'html.parser')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['https://upload.wikimedia.org/wikipedia/en/thumb/5/5f/Disambig_gray.svg/30px-Disambig_gray.svg.png']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "#your code"
+    "#links = soup.find_all('a', {'class': 'image'})\n",
+    "lst = []\n",
+    "for e in soup.select('a.image img'):\n",
+    "    lst.append('https:' + e.get('src'))\n",
+    "#print ([i.find('img')['title'] for i in links])\n",
+    "display(lst)"
    ]
   },
   {
@@ -204,21 +270,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is the url you will scrape in this exercise\n",
-    "url ='https://en.wikipedia.org/wiki/Python' "
+    "url ='https://en.wikipedia.org/wiki/Python' \n",
+    "#create a list of list\n",
+    "res = requests.get(url)\n",
+    "soup = BeautifulSoup(res.text,'html.parser')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['#Snakes',\n",
+       " '#Ancient_Greece',\n",
+       " '#Media_and_entertainment',\n",
+       " '#Computing',\n",
+       " '#Engineering',\n",
+       " '#Roller_coasters',\n",
+       " '#Vehicles',\n",
+       " '#Weaponry',\n",
+       " '#People',\n",
+       " '#Other_uses',\n",
+       " '#See_also',\n",
+       " '/wiki/Pythonidae',\n",
+       " '/wiki/Python_(genus)',\n",
+       " '/wiki/Python_(mythology)',\n",
+       " '/wiki/Python_of_Aenus',\n",
+       " '/wiki/Python_(painter)',\n",
+       " '/wiki/Python_of_Byzantium',\n",
+       " '/wiki/Python_of_Catana',\n",
+       " '/wiki/Python_(film)',\n",
+       " '/wiki/Pythons_2',\n",
+       " '/wiki/Monty_Python',\n",
+       " '/wiki/Python_(Monty)_Pictures',\n",
+       " '/wiki/Python_(programming_language)',\n",
+       " '/wiki/CPython',\n",
+       " '/wiki/CMU_Common_Lisp',\n",
+       " '/wiki/PERQ#PERQ_3',\n",
+       " '/wiki/Python_(Busch_Gardens_Tampa_Bay)',\n",
+       " '/wiki/Python_(Coney_Island,_Cincinnati,_Ohio)',\n",
+       " '/wiki/Python_(Efteling)',\n",
+       " '/wiki/Python_(automobile_maker)',\n",
+       " '/wiki/Python_(Ford_prototype)',\n",
+       " '/wiki/Colt_Python',\n",
+       " '/wiki/Python_(missile)',\n",
+       " '/wiki/Python_(nuclear_primary)',\n",
+       " '/wiki/Python_Anghelo',\n",
+       " '/wiki/PYTHON',\n",
+       " '/wiki/Cython',\n",
+       " '/wiki/Pyton',\n",
+       " '/wiki/Category:Disambiguation_pages',\n",
+       " '/wiki/Category:Disambiguation_pages_with_short_description',\n",
+       " '/wiki/Category:All_article_disambiguation_pages',\n",
+       " '/wiki/Category:All_disambiguation_pages',\n",
+       " '/wiki/Category:Animal_common_name_disambiguation_pages',\n",
+       " '/wiki/Special:MyTalk',\n",
+       " '/wiki/Special:MyContributions',\n",
+       " '/w/index.php?title=Special:CreateAccount&returnto=Python',\n",
+       " '/w/index.php?title=Special:UserLogin&returnto=Python',\n",
+       " '/wiki/Python',\n",
+       " '/wiki/Talk:Python',\n",
+       " '/wiki/Python',\n",
+       " '/w/index.php?title=Python&action=edit',\n",
+       " '/w/index.php?title=Python&action=history',\n",
+       " '/wiki/Main_Page',\n",
+       " '/wiki/Portal:Contents',\n",
+       " '/wiki/Portal:Featured_content',\n",
+       " '/wiki/Portal:Current_events',\n",
+       " '/wiki/Special:Random',\n",
+       " 'https://donate.wikimedia.org/wiki/Special:FundraiserRedirector?utm_source=donate&utm_medium=sidebar&utm_campaign=C13_en.wikipedia.org&uselang=en',\n",
+       " '//shop.wikimedia.org',\n",
+       " '/wiki/Help:Contents',\n",
+       " '/wiki/Wikipedia:About',\n",
+       " '/wiki/Wikipedia:Community_portal',\n",
+       " '/wiki/Special:RecentChanges',\n",
+       " '//en.wikipedia.org/wiki/Wikipedia:Contact_us',\n",
+       " '/wiki/Special:WhatLinksHere/Python',\n",
+       " '/wiki/Special:RecentChangesLinked/Python',\n",
+       " '/wiki/Wikipedia:File_Upload_Wizard',\n",
+       " '/wiki/Special:SpecialPages',\n",
+       " '/w/index.php?title=Python&oldid=900406526',\n",
+       " '/w/index.php?title=Python&action=info',\n",
+       " 'https://www.wikidata.org/wiki/Special:EntityPage/Q747452',\n",
+       " '/w/index.php?title=Special:CiteThisPage&page=Python&id=900406526',\n",
+       " 'https://commons.wikimedia.org/wiki/Category:Python',\n",
+       " '/w/index.php?title=Special:Book&bookcmd=book_creator&referer=Python',\n",
+       " '/w/index.php?title=Special:ElectronPdf&page=Python&action=show-download-screen',\n",
+       " '/w/index.php?title=Python&printable=yes',\n",
+       " 'https://af.wikipedia.org/wiki/Python',\n",
+       " 'https://als.wikipedia.org/wiki/Python',\n",
+       " 'https://az.wikipedia.org/wiki/Python',\n",
+       " 'https://bn.wikipedia.org/wiki/%E0%A6%AA%E0%A6%BE%E0%A6%87%E0%A6%A5%E0%A6%A8_(%E0%A6%A6%E0%A7%8D%E0%A6%AC%E0%A7%8D%E0%A6%AF%E0%A6%B0%E0%A7%8D%E0%A6%A5%E0%A6%A4%E0%A6%BE_%E0%A6%A8%E0%A6%BF%E0%A6%B0%E0%A6%B8%E0%A6%A8)',\n",
+       " 'https://be.wikipedia.org/wiki/Python',\n",
+       " 'https://bg.wikipedia.org/wiki/%D0%9F%D0%B8%D1%82%D0%BE%D0%BD_(%D0%BF%D0%BE%D1%8F%D1%81%D0%BD%D0%B5%D0%BD%D0%B8%D0%B5)',\n",
+       " 'https://cs.wikipedia.org/wiki/Python_(rozcestn%C3%ADk)',\n",
+       " 'https://da.wikipedia.org/wiki/Python',\n",
+       " 'https://de.wikipedia.org/wiki/Python',\n",
+       " 'https://eo.wikipedia.org/wiki/Pitono_(apartigilo)',\n",
+       " 'https://eu.wikipedia.org/wiki/Python_(argipena)',\n",
+       " 'https://fa.wikipedia.org/wiki/%D9%BE%D8%A7%DB%8C%D8%AA%D9%88%D9%86',\n",
+       " 'https://fr.wikipedia.org/wiki/Python',\n",
+       " 'https://ko.wikipedia.org/wiki/%ED%8C%8C%EC%9D%B4%EC%84%A0',\n",
+       " 'https://hr.wikipedia.org/wiki/Python_(razdvojba)',\n",
+       " 'https://io.wikipedia.org/wiki/Pitono',\n",
+       " 'https://id.wikipedia.org/wiki/Python',\n",
+       " 'https://ia.wikipedia.org/wiki/Python_(disambiguation)',\n",
+       " 'https://is.wikipedia.org/wiki/Python_(a%C3%B0greining)',\n",
+       " 'https://it.wikipedia.org/wiki/Python_(disambigua)',\n",
+       " 'https://he.wikipedia.org/wiki/%D7%A4%D7%99%D7%AA%D7%95%D7%9F',\n",
+       " 'https://ka.wikipedia.org/wiki/%E1%83%9E%E1%83%98%E1%83%97%E1%83%9D%E1%83%9C%E1%83%98_(%E1%83%9B%E1%83%A0%E1%83%90%E1%83%95%E1%83%90%E1%83%9A%E1%83%9B%E1%83%9C%E1%83%98%E1%83%A8%E1%83%95%E1%83%9C%E1%83%94%E1%83%9A%E1%83%9D%E1%83%95%E1%83%90%E1%83%9C%E1%83%98)',\n",
+       " 'https://kg.wikipedia.org/wiki/Mboma_(nyoka)',\n",
+       " 'https://la.wikipedia.org/wiki/Python_(discretiva)',\n",
+       " 'https://lb.wikipedia.org/wiki/Python',\n",
+       " 'https://hu.wikipedia.org/wiki/Python_(egy%C3%A9rtelm%C5%B1s%C3%ADt%C5%91_lap)',\n",
+       " 'https://mr.wikipedia.org/wiki/%E0%A4%AA%E0%A4%BE%E0%A4%AF%E0%A4%A5%E0%A5%89%E0%A4%A8_(%E0%A4%86%E0%A4%9C%E0%A5%8D%E0%A4%9E%E0%A4%BE%E0%A4%B5%E0%A4%B2%E0%A5%80_%E0%A4%AD%E0%A4%BE%E0%A4%B7%E0%A4%BE)',\n",
+       " 'https://nl.wikipedia.org/wiki/Python',\n",
+       " 'https://ja.wikipedia.org/wiki/%E3%83%91%E3%82%A4%E3%82%BD%E3%83%B3',\n",
+       " 'https://no.wikipedia.org/wiki/Pyton',\n",
+       " 'https://pl.wikipedia.org/wiki/Pyton',\n",
+       " 'https://pt.wikipedia.org/wiki/Python_(desambigua%C3%A7%C3%A3o)',\n",
+       " 'https://ru.wikipedia.org/wiki/Python_(%D0%B7%D0%BD%D0%B0%D1%87%D0%B5%D0%BD%D0%B8%D1%8F)',\n",
+       " 'https://sd.wikipedia.org/wiki/%D8%A7%D8%B1%DA%99',\n",
+       " 'https://sk.wikipedia.org/wiki/Python',\n",
+       " 'https://sh.wikipedia.org/wiki/Python',\n",
+       " 'https://fi.wikipedia.org/wiki/Python',\n",
+       " 'https://sv.wikipedia.org/wiki/Pyton',\n",
+       " 'https://th.wikipedia.org/wiki/%E0%B9%84%E0%B8%9E%E0%B8%97%E0%B8%AD%E0%B8%99',\n",
+       " 'https://tr.wikipedia.org/wiki/Python',\n",
+       " 'https://uk.wikipedia.org/wiki/%D0%9F%D1%96%D1%84%D0%BE%D0%BD',\n",
+       " 'https://ur.wikipedia.org/wiki/%D9%BE%D8%A7%D8%A6%DB%8C%D8%AA%DA%BE%D9%88%D9%86',\n",
+       " 'https://vi.wikipedia.org/wiki/Python',\n",
+       " 'https://zh.wikipedia.org/wiki/Python_(%E6%B6%88%E6%AD%A7%E4%B9%89)',\n",
+       " '//en.wikipedia.org/wiki/Wikipedia:Text_of_Creative_Commons_Attribution-ShareAlike_3.0_Unported_License',\n",
+       " '//creativecommons.org/licenses/by-sa/3.0/',\n",
+       " '//foundation.wikimedia.org/wiki/Terms_of_Use',\n",
+       " '//foundation.wikimedia.org/wiki/Privacy_policy',\n",
+       " '//www.wikimediafoundation.org/',\n",
+       " 'https://foundation.wikimedia.org/wiki/Privacy_policy',\n",
+       " '/wiki/Wikipedia:About',\n",
+       " '/wiki/Wikipedia:General_disclaimer',\n",
+       " '//en.wikipedia.org/wiki/Wikipedia:Contact_us',\n",
+       " 'https://www.mediawiki.org/wiki/Special:MyLanguage/How_to_contribute',\n",
+       " 'https://foundation.wikimedia.org/wiki/Cookie_statement',\n",
+       " '//en.m.wikipedia.org/w/index.php?title=Python&mobileaction=toggle_view_mobile',\n",
+       " 'https://wikimediafoundation.org/',\n",
+       " 'https://www.mediawiki.org/']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "#your code"
+    "#\n",
+    "lst = []\n",
+    "for e in soup.select('ul a'):\n",
+    "    lst.append(e.get('href'))\n",
+    "display(lst)"
    ]
   },
   {
@@ -630,7 +846,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
