--- a/module-1/lab-web-scraping/your-code/main.ipynb
+++ b/module-1/lab-web-scraping/your-code/main.ipynb
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,14 +512,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "# WIP - Este no funciona todavía\n",
+    "titles = soup.findAll('id', attrs = { 'class' : 'usctitle' }) \n",
+    "for title in titles:\n",
+    "    print(title.contents)\n"
    ]
   },
   {
